Install aws-cli in cfn-init, not user data

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -158,7 +158,7 @@ Resources:
               Content-Type: text/x-shellscript; charset="us-ascii"
 
               #!/bin/bash
-              yum install -y aws-cfn-bootstrap aws-cli
+              yum install -y aws-cfn-bootstrap
 
               # --resource is the logical ID of the resource in a CloudFormation stack (generally a stack launched from
               # this template) that includes AWS::CloudFormation::Init metadata. By convention, this is the same
@@ -198,8 +198,7 @@ Resources:
         config:
           packages:
             yum:
-              #     aws-cli: []
-              #     bc: []
+              aws-cli: []
               jq: []
           files:
             /etc/ecs/ecs.config:
