--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -161,7 +161,7 @@ Resources:
               Content-Type: text/x-shellscript; charset="us-ascii"
 
               #!/bin/bash
-              yum install -y aws-cfn-bootstrap
+              yum install -y aws-cfn-bootstrap aws-cli
 
               # --resource is the logical ID of the resource in a CloudFormation stack (generally a stack launched from
               # this template) that includes AWS::CloudFormation::Init metadata. By convention, this is the same
@@ -201,7 +201,6 @@ Resources:
         config:
           packages:
             yum:
-              aws-cli: []
               jq: []
           files:
             /etc/ecs/ecs.config:
