Preinstall bind-utils on instances

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -138,9 +138,7 @@ Resources:
           # support configuration updates on running EC2 instance, the user
           # data should primarily be used to run cfn-init. Any further launch
           # scripts or tasks should be defined in the resource metadata that
-          # cfn-init loads, and that cfn-hup watches for changes. cfn-init and
-          # cfn-signal are provided as part of the CloudFormation helper that
-          # are preinstalled on Amazon Linux AMI images.
+          # cfn-init loads, and that cfn-hup watches for changes.
           # https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/user-data.html
           # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/bootstrap_container_instance.html#multi-part_user_data
           # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/cfn-helper-scripts-reference.html#cfn-helper-scripts-reference-amazon-amis
@@ -161,6 +159,9 @@ Resources:
               Content-Type: text/x-shellscript; charset="us-ascii"
 
               #!/bin/bash
+              # Despite what the docs say, the CloudFormation helper scripts are not preinstalled, so we install them
+              # with aws-cfn-bootstrap. aws-cli fails to install as part of the cfn-init packages, so it's installed
+              # here, even though they both use yum. Other packages should be installed through cfn-init.
               yum install -y aws-cfn-bootstrap aws-cli
 
               # --resource is the logical ID of the resource in a CloudFormation stack (generally a stack launched from
@@ -202,6 +203,7 @@ Resources:
           packages:
             yum:
               jq: []
+              bind-utils: []
           files:
             /etc/ecs/ecs.config:
               # https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-agent-config.html
