Add missing Alarm units

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -506,6 +506,7 @@ Resources:
       Period: 300
       Threshold: 0.2
       TreatMissingData: notBreaching
+      Unit: Seconds
   AlbResponseTimeP95AlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
