--- a/stacks/shared-redis.yml
+++ b/stacks/shared-redis.yml
@@ -109,6 +109,7 @@ Resources:
       Statistic: Maximum
       Threshold: 0.85
       TreatMissingData: notBreaching
+      Unit: Percent
   RedisMemoryLowAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
@@ -143,6 +144,7 @@ Resources:
       Statistic: Maximum
       Threshold: 0.93
       TreatMissingData: notBreaching
+      Unit: Percent
   RedisMemoryVeryLowAlarmTags:
     Type: Custom::CloudWatchAlarmTags
     Condition: IsProduction
