--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -231,9 +231,9 @@ Resources:
                 runas=root
           commands:
             01_check_redis_connectivity:
-              # Resolve the Dovetail Redis host and check all IPs returned for
+              # Resolve the shared Redis host and check all IPs returned for
               # connectivity. If any can't connect, the instance is marked as
-              # unhealthy
+              # unhealthy.
               command: !Sub
                 - |-
                   #!/bin/bash
