--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -145,6 +145,10 @@ Resources:
           Fn::Base64:
             Fn::Sub: |
               #!/bin/bash
+              # The logs for this are found in: /var/log/cloud-init-output.log
+              # Except the cfn-signal seems to get logged to /var/log/cfn-init.log
+              # along with the rest of the cfn-init logs
+              #
               # Despite what the docs say, the CloudFormation helper scripts are not preinstalled, so we install them
               # with aws-cfn-bootstrap. aws-cli fails to install as part of the cfn-init packages, so it's installed
               # here, even though they both use yum. Other packages should be installed through cfn-init.
