Set ASG update minimums

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -322,8 +322,8 @@ Resources:
         # Applies when CloudFormation wants to update the ASG and its instances
         # in a rolling manner (i.e., WillReplace: false).
         MaxBatchSize: 1
-        MinInstancesInService: 0
-        MinSuccessfulInstancesPercent: 50
+        MinInstancesInService: !If [IsProduction, 3, 1]
+        MinSuccessfulInstancesPercent: 100
         PauseTime: PT5M
         SuspendProcesses:
           # https://docs.aws.amazon.com/autoscaling/ec2/APIReference/API_SuspendProcesses.html
