Add AuthorizedKeys parameter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -26,6 +26,7 @@ Parameters:
   NewRelicApiKeyPrxLite: { Type: String, Default: "" }
   CastlePostgresUsername: { Type: String, Default: "" }
   CastlePostgresUserPassword: { Type: String, Default: "", NoEcho: true }
+  AuthorizedKeys: { Type: CommaDelimitedList, Default: "", NoEcho: true }
   # Required
   AwsOrganizationId: { Type: String }
   AsgKeyPairName:
@@ -51,6 +52,7 @@ Parameters:
       must be a /16 private network
   DovetailRedisHostname: { Type: String } # TODO Still need this?
   PorterJobExecutionSnsTopicArn: { Type: String }
+  SharedResourceSharePrincipals: { Type: CommaDelimitedList }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
@@ -98,7 +100,6 @@ Parameters:
   BetaPrxOrgCloudFrontOai: { Type: String }
   BacksawArchiveS3ObjectKey: { Type: String }
   BacksawCloudFrontOai: { Type: String }
-  SharedResourceSharePrincipals: { Type: CommaDelimitedList }
   TheWorldSearchCodeS3ObjectKey: { Type: String }
   TheWorldSearchGoogleCustomSearchEngineId: { Type: String }
   TheWorldSearchGoogleCustomSearchApiKey: { Type: String }
