--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -626,6 +626,7 @@ Resources:
           Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
         CloudWatchLogGroupTaggerServiceToken: !GetAtt CustomResourcesStack.Outputs.CloudWatchLogGroupTaggerServiceToken
         KeyPairName: !Ref AsgKeyPairName
+        AuthorizedKeys: !Join [",", !Ref AuthorizedKeys]
         VpcPublicSubnet1Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet1Id
         VpcPublicSubnet2Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet2Id
         VpcPublicSubnet3Id: !GetAtt SharedVpcStack.Outputs.PublicSubnet3Id
