--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -287,8 +287,9 @@ Resources:
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
     Properties:
-      GroupDescription: !Sub Castle ${EnvironmentType} Security Group
+      GroupDescription: !Sub Castle QuickSight ${EnvironmentType} Security Group
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_castle_postgresql-quicksight" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
@@ -369,6 +370,7 @@ Resources:
           SourceSecurityGroupId: !GetAtt QuicksightVpcSecurityGroup.GroupId
           ToPort: 5432
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_castle_postgresql" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
