Add S3 bucket stack parameters

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -53,6 +53,11 @@ Parameters:
   DovetailRedisHostname: { Type: String } # TODO Still need this?
   PorterJobExecutionSnsTopicArn: { Type: String }
   SharedResourceSharePrincipals: { Type: CommaDelimitedList }
+  FeedsS3BucketArn: { Type: String }
+  MediajointS3BucketArn: { Type: String }
+  NetworksS3BucketArn: { Type: String }
+  WfmtServicesS3BucketArn: { Type: String }
+  AdFilesS3BucketArn: { Type: String }
   # Application Specific
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
