Use Feeder bucket param in CMS

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -42,6 +42,7 @@ Parameters:
   SharedRedisReplicationGroupEndpointPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
+  FeedsS3BucketArn: { Type: String }
 
   CmsEcrImageTag: { Type: String }
   CmsSecretsVersion: { Type: String }
@@ -112,6 +113,7 @@ Resources:
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
+        FeedsS3BucketArn: !Ref FeedsS3BucketArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
