--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -798,6 +798,7 @@ Resources:
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
+        FeedsS3BucketArn: !Ref FeedsS3BucketArn
 
         # App-specific parameters
 
