--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -47,6 +47,7 @@ Parameters:
   SharedAuroraMysqlPort: { Type: String }
   AnnounceResourcePrefix: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
+  FeedsS3BucketArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -196,9 +197,9 @@ Resources:
                   - s3:Put*
                   - s3:RestoreObject
                 Effect: Allow
-                Resource: # TODO Turn these into root stack paramters
-                  - !If [IsProduction, arn:aws:s3:::prx-feed/*, arn:aws:s3:::staging-prx-feed/*]
-                  - !If [IsProduction, arn:aws:s3:::prx-feed, arn:aws:s3:::staging-prx-feed]
+                Resource:
+                  - !Sub ${FeedsS3BucketArn}/*
+                  - !Ref FeedsS3BucketArn
             Version: "2012-10-17"
           PolicyName: S3FeedBucket
       Tags:
