User ad files bucket param in Augury

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -50,6 +50,7 @@ Parameters:
   CmsHostname: { Type: String }
   DovetailRouterHostname: { Type: String }
   SharedGlueDatabaseName: { Type: String }
+  AdFilesS3BucketArn: { Type: String }
 
   AuguryEcrImageTag: { Type: String }
   AugurySecretsVersion: { Type: String }
@@ -104,6 +105,7 @@ Resources:
         CastleHostname: !Ref CastleHostname
         CmsHostname: !Ref CmsHostname
         DovetailRouterHostname: !Ref DovetailRouterHostname
+        AdFilesS3BucketArn: !Ref AdFilesS3BucketArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
