--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -999,6 +999,7 @@ Resources:
         DovetailCdnHostname: !GetAtt Constants.DovetailCdnHostname
         DovetailRouterHostname: !GetAtt Constants.DovetailRouterHostname
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
+        AdFilesS3BucketArn: !Ref AdFilesS3BucketArn
 
         # App-specific parameters
 
