--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -52,6 +52,7 @@ Parameters:
   CastleHostname: { Type: String }
   CmsHostname: { Type: String }
   DovetailRouterHostname: { Type: String }
+  AdFilesS3BucketArn: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
@@ -454,8 +455,7 @@ Resources:
               - s3:ListMultipartUploadParts
               - s3:PutObject
             Resource:
-              # TODO, handle this better for multi-region
-              - arn:aws:s3:::prx-mrr-us-east-1-ad-files/upload/*
+              - !Sub ${AdFilesS3BucketArn}/upload/*
       PolicyName: ExternalS3BucketAccess
       Users:
         - !Ref S3SigningUser
