Use feeds bucket param in Feeder

--- a/stacks/apps-200A.yml
+++ b/stacks/apps-200A.yml
@@ -61,6 +61,7 @@ Parameters:
   SharedGlueDatabaseName: { Type: String }
   AnnounceResourcePrefix: { Type: String }
   PorterJobExecutionSnsTopicArn: { Type: String }
+  FeedsS3BucketArn: { Type: String }
 
   BetaPrxOrgArchiveS3ObjectKey: { Type: String }
   BetaPrxOrgCloudFrontOai: { Type: String }
@@ -266,6 +267,7 @@ Resources:
         SharedAuroraPostgresqlPort: !Ref SharedAuroraPostgresqlPort
         SharedGlueDatabaseName: !Ref SharedGlueDatabaseName
         AnnounceResourcePrefix: !Ref AnnounceResourcePrefix
+        FeedsS3BucketArn: !Ref FeedsS3BucketArn
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
