--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -907,6 +907,7 @@ Resources:
         SharedGlueDatabaseName: !GetAtt SharedGlueDatabaseStack.Outputs.SharedGlueDatabaseName
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
+        FeedsS3BucketArn: !Ref FeedsS3BucketArn
 
         # App-specific parameters
 
