--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -908,6 +908,7 @@ Resources:
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         FeedsS3BucketArn: !Ref FeedsS3BucketArn
+        MediajointS3BucketArn: !Ref MediajointS3BucketArn
 
         # App-specific parameters
 
