Use bucket params in S3 Signing

--- a/stacks/apps/s3-signing.yml
+++ b/stacks/apps/s3-signing.yml
@@ -16,6 +16,9 @@ Parameters:
   CloudWatchLogGroupTaggerServiceToken: { Type: String }
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
+  MediajointS3BucketArn: { Type: String }
+  NetworksS3BucketArn: { Type: String }
+  WfmtServicesS3BucketArn: { Type: String }
 
 Resources:
   UploadHttpApi:
@@ -108,35 +111,24 @@ Resources:
     Type: AWS::IAM::Policy
     Properties:
       PolicyDocument:
-        # TODO Need to be updated for multi-region replication
         Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Action:
+          - Action:
               - s3:* # TODO Can this be the same as the others?
-            Resource:
-              - arn:aws:s3:::test.mediajoint.prx.org/public/uploads/*
-              - arn:aws:s3:::development.mediajoint.prx.org/public/uploads/*
-              - arn:aws:s3:::staging.mediajoint.prx.org/public/uploads/*
-              - arn:aws:s3:::production.mediajoint.prx.org/public/uploads/*
-          - Effect: Allow
-            Action:
+            Effect: Allow
+            Resource: !Sub ${MediajointS3BucketArn}/public/uploads/*
+          - Action:
               - s3:AbortMultipartUpload
               - s3:ListMultipartUploadParts
               - s3:PutObject
-            Resource:
-              - arn:aws:s3:::test.networks.prx.org/public/item_attachments/*
-              - arn:aws:s3:::development.networks.prx.org/public/item_attachments/*
-              - arn:aws:s3:::staging.networks.prx.org/public/item_attachments/*
-              - arn:aws:s3:::production.networks.prx.org/public/item_attachments/*
-          - Effect: Allow
-            Action:
+            Effect: Allow
+            Resource: !Sub ${NetworksS3BucketArn}/public/item_attachments/*
+          - Action:
               - s3:AbortMultipartUpload
               - s3:ListMultipartUploadParts
               - s3:PutObject
-            Resource:
-              - arn:aws:s3:::wfmt-services*
-              - arn:aws:s3:::wfmt-services/*
+            Effect: Allow
+            Resource: !Sub ${WfmtServicesS3BucketArn}/*
       PolicyName: ExternalS3BucketAccess
       Users:
         - !Ref UploadHttpSigningUser
