--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -799,6 +799,9 @@ Resources:
         AnnounceResourcePrefix: !GetAtt SharedAnnounceStack.Outputs.ResourcePrefix
         PorterJobExecutionSnsTopicArn: !Ref PorterJobExecutionSnsTopicArn
         FeedsS3BucketArn: !Ref FeedsS3BucketArn
+        MediajointS3BucketArn: !Ref MediajointS3BucketArn
+        NetworksS3BucketArn: !Ref NetworksS3BucketArn
+        WfmtServicesS3BucketArn: !Ref WfmtServicesS3BucketArn
 
         # App-specific parameters
 
